--- a/触点取数插件.html
+++ b/触点取数插件.html
@@ -13,12 +13,16 @@
 			width: 600px;
 			height: 50px;
 		}
+		img{
+			width:200px;
+			height:180px;
+		}
 	</style>
 	<script src="jquery-3.4.1.min.js"></script>
 </head>
 <body>
 	<form>
-		<div id="tip">1、找到数据银行后台对应文件，右键复制。<br>
+		<div id="tip">使用说明：<br>1、找到数据银行后台对应文件，右键复制。<br>
 			<img src="a.png"/><br>
 			2、粘贴到输入框中,点击确定，再将输出的内容复制到excel中进行操作。</div><br>
 		<span>输入：</span><textarea id="shuru1"></textarea>
