--- a/触点取数插件.html
+++ b/触点取数插件.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>触点取数插件</title>
 	<style>
 		#tip{
-			line-height: 10px;
+			line-height: 30px;
 			margin-top: 20px; 
 			margin-left: 30px;
 		}
@@ -14,8 +14,8 @@
 			height: 50px;
 		}
 		img{
-			width:200px;
-			height:180px;
+			width:600px;
+			height:350px;
 		}
 	</style>
 	<script src="jquery-3.4.1.min.js"></script>
